[package]
name = "WPCrypto"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4"

# --- derivation ---
bip39 = "2"
bip32 = "0.5"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
tiny-keccak = { version = "2", features = ["keccak"] }
bs58 = { version = "0.5", features = ["check"] }

# --- keys storage ---
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

directories = "5"